--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-socket.io": "^10.0.4",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.0.4",
+    "bcrypt": "^5.1.0",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
