--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.1",
     "web-vitals": "^2.1.4"
   },
